force-app/main/default/objects/FNS_TaxDetails__c/FNS_TaxDetails__c.object-meta.xml
<CustomObject>
    <label>Tax Details</label>
    <nameField>
        <label>Tax Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>