force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_AccountName__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TaxDetails</relationshipLabel>
    <relationshipName>TaxDetails</relationshipName>
    <type>Lookup</type>
</CustomField>