force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_TaxCountry__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxCountry__c</fullName>
    <label>Tax Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>