force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_TaxExmptCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxExmptCode__c</fullName>
    <label>Tax Exempt Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
			<value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>