force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxNumber__c</fullName>
    <externalId>true</externalId>
    <label>Tax Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>