force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_TaxPayerId__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxPayerId__c</fullName>
    <label>Tax Payer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>