force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_TaxRegion__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxRegion__c</fullName>
    <label>Tax Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>