force-app/main/default/objects/FNS_TaxDetails__c/fields/FNS_TaxType__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxType__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bond</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>