force-app/main/default/objects/FNS_TaxDetails__c/recordTypes/FNS_TaxDetails.recordType-meta.xml
<RecordType>
    <fullName>FNS_TaxDetails</fullName>
    <active>true</active>
    <label>Tax Details</label>
</RecordType>