force-app/main/default/objects/FNS_TaxDetails__c/recordTypes/FNS_TaxDetails_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>FNS_TaxDetails_Read_Only</fullName>
    <active>true</active>
    <label>FNS TaxDetails Read Only</label>
</RecordType>