force-app/main/default/objects/FNS_TaxDetails__c/listViews/FNS_TaxDetails.listView-meta.xml
<ListView>
    <fullName>FNS_TaxDetails</fullName>
    <columns>NAME</columns>
    <columns>FNS_TaxRegion__c</columns>
    <columns>FNS_TaxType__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tax Details</label>
</ListView>